Menu Agent finish